Add all needed plugins

--- a/ollydbg.ini
+++ b/ollydbg.ini
@@ -160,7 +160,7 @@ Restore command line window=0
 [Placement]
 OllyTest=363,32,640,480,1
 CPU=0,0,522,370,3
-CPU subwindows=409,930,371,930,358,1024,320,910
+CPU subwindows=420,930,414,930,358,1024,320,910
 [History]
 View file=
 View text file=
@@ -173,7 +173,7 @@ Text save file=
 Symbolic data path=C:\new odbg110
 UDD path=C:\new odbg110
 Plugin path=C:\new odbg110
-Executable[1]=
+Executable[1]=C:\Users\Win32\Desktop\new_stage1.exe
 Executable[2]=
 Executable[3]=
 Executable[4]=
@@ -250,11 +250,55 @@ Executable[0]=
 [Appearance]
 CPU scheme=3
 CPU Disassembler=1,3,0,0,1
-CPU Dump=1,3,1,0,41217,0
+CPU Dump=1,3,1,0,4353,0
 CPU Stack=1,3,1,0
 CPU Info=1,3,0,0
 CPU Registers=1,3,1,0
 [Columns]
 CPU Disassembler=54,102,240,1536
-CPU Dump=54,288,54
+CPU Dump=54,288,102
 CPU Stack=54,60,1536
+[Plugin PhantOm]
+VERSION=185
+HIDENAME=extremhide
+CAPTEXT=Phant0m
+PRETEXT=yOo
+DELTARDTSC=33000
+PEB=1
+BUG=1
+DRX=0
+DRIVER=0
+RDTSC=0
+SETCONTEXT=0
+BLOCK=0
+GETCOUNT=0
+COMP64=0
+REMOVEEP=0
+HANDLE=1
+CAPTION=1
+WINDOWS=0
+NEWBREAK=0
+ZWQIP=1
+[Plugin StrongOD]
+CreateProcessMode=0
+HidePEB=1
+IsPatchFloat=0
+IsAdvGoto=1
+KernelMode=0
+KillPEBug=1
+SuperEnumMod=1
+AdvAttach=0
+SkipExpection=1
+OrdFirst=0
+BreakOnLdr=0
+BreakOnTls=0
+RemoveEpOneShot=0
+ShowBar=17
+LoadSym=1
+AutoUpdate=1
+HideWindow=1
+HideProcess=1
+ProtectProcess=1
+DriverKey=-82693034
+DriverName=fengyue0
+UpdateURL=http://www.cracklife.com/sod/update.txt
