--- a/ollydbg.ini
+++ b/ollydbg.ini
@@ -3,7 +3,7 @@ Check DLL versions=0
 Show toolbar=1
 Status in toolbar=0
 Use hardware breakpoints to step=0
-Restore windows=1
+Restore windows=169
 Scroll MDI=0
 Horizontal scroll=0
 Topmost window=0
@@ -158,9 +158,13 @@ Restore bookmarks window=0
 [Plugin Command line]
 Restore command line window=0
 [Placement]
-OllyTest=363,32,640,480,1
+OllyTest=864,127,640,480,1
 CPU=0,0,522,370,3
-CPU subwindows=420,930,414,930,358,1024,320,910
+CPU subwindows=325,500,319,500,535,891,497,892
+Breakpoints=26,26,506,187,1
+Log data=78,78,386,232,1
+Memory map=838,92,398,187,1
+References=78,78,626,142,1
 [History]
 View file=
 View text file=
@@ -170,15 +174,15 @@ Log file=log.txt
 Run trace file=rtrace.txt
 API help file=
 Text save file=
-Symbolic data path=C:\new odbg110
-UDD path=C:\new odbg110
-Plugin path=C:\new odbg110
-Executable[1]=C:\Users\Win32\Desktop\new_stage1.exe
+Symbolic data path=C:\OllyDbg
+UDD path=C:\OllyDbg
+Plugin path=C:\OllyDbg
+Executable[1]=
 Executable[2]=
 Executable[3]=
 Executable[4]=
 Executable[5]=
-Executable[0]=C:\Users\Win32\Desktop\stage1.exe
+Executable[0]=
 [Colours]
 Scheme[0]=10,12,18,0,1,2,13,13
 Scheme name[0]=Dave's black
@@ -254,18 +258,26 @@ CPU Dump=1,3,1,0,4353,0
 CPU Stack=1,3,1,0
 CPU Info=1,3,0,0
 CPU Registers=1,3,1,0
+Breakpoints=1,0,1,0,0
+Log data=1,0,1,0,0
+Memory map=1,0,1,0,0
+References=1,0,1,0,0
 [Columns]
 CPU Disassembler=54,102,240,1536
 CPU Dump=54,288,102
 CPU Stack=54,60,1536
+Breakpoints=54,54,150,216,1536
+Log data=54,1536
+Memory map=54,54,54,54,72,30,48,48,1536
+References=54,240,1536
 [Plugin PhantOm]
 VERSION=185
 HIDENAME=extremhide
 CAPTEXT=Phant0m
 PRETEXT=yOo
 DELTARDTSC=33000
-PEB=1
-BUG=1
+PEB=0
+BUG=0
 DRX=0
 DRIVER=0
 RDTSC=0
@@ -274,21 +286,21 @@ BLOCK=0
 GETCOUNT=0
 COMP64=0
 REMOVEEP=0
-HANDLE=1
-CAPTION=1
+HANDLE=0
+CAPTION=0
 WINDOWS=0
 NEWBREAK=0
-ZWQIP=1
+ZWQIP=0
 [Plugin StrongOD]
 CreateProcessMode=0
-HidePEB=1
+HidePEB=0
 IsPatchFloat=0
 IsAdvGoto=1
 KernelMode=0
-KillPEBug=1
-SuperEnumMod=1
+KillPEBug=0
+SuperEnumMod=0
 AdvAttach=0
-SkipExpection=1
+SkipExpection=0
 OrdFirst=0
 BreakOnLdr=0
 BreakOnTls=0
